2008-06-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Another
	  workaround for gtk# bug #398929.

2008-06-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SearchWidget.cs: Workaround for gtk# bug
	  #398929.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, MonoDevelop.SourceEditor.addin.xml: Bump MD
	  version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Use the OnDestroyed event instead of Dispose, since with the latest
	  changes in gtk#, Dispose is not called anymore when a widget is
	  destroyed.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fix search issue with
	  the ITextIterator implementation. The iterator should wrap around
	  the end of the document if the initial position is not 0.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed dispose source
	  editor widget bug.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added new dom & new
	  class browser.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Dispose() is called
	  after the widget is destroyed. There is no need to explicitely
	  destroy child widgets since destroying the parent widgets destroys
	  all children.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Don't explicitelly call
	  widget.Dispose, since Destroy already calls it.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs,